<?xml version="1.0"?>
<package format="2">
  <name>laser_scanners</name>
  <version>0.0.1</version>
  <description>The laser_scanners package</description>
  <maintainer email="att@todo.todo">att</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>lms1xx</depend>
  <depend>laser_geometry</depend>
  <export>
  </export>
</package>
